Fix text overflow for long video titles

--- a/styles/style.css
+++ b/styles/style.css
@@ -255,6 +255,7 @@ ol {
 }
 
 .content__video-card-title {
+  max-inline-size: 200px;
   margin-block-end: 6px;
   color: #fff;
   font-family: Oswald, sans-serif;
@@ -263,6 +264,9 @@ ol {
   font-style: normal;
   line-height: 1;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description {
